Use migration code first EF for mysql server

--- a/OR.Web/appsettings.json
+++ b/OR.Web/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "DataSource=app.db"
+    "DefaultConnection": "Server=localhost;Initial Catalog=onlinerequest;Persist Security Info=False;User ID=sa;Password=Welkom01;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=true;Connection Timeout=30;"
   },
   "Logging": {
     "LogLevel": {
