--- a/OR.Data/OR.Data.csproj
+++ b/OR.Data/OR.Data.csproj
@@ -13,4 +13,8 @@
     </PackageReference>
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.6" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Entities\" />
+    <Folder Include="Interfaces\" />
+  </ItemGroup>
 </Project>
