add search request

--- a/OR.Web/OR.Web.csproj
+++ b/OR.Web/OR.Web.csproj
@@ -22,6 +22,7 @@
     <Folder Include="Apis\" />
     <Folder Include="Migrations\" />
     <Folder Include="Mailing\" />
+    <Folder Include="Constants\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\OR.Data\OR.Data.csproj">
