--- a/OR.Data/OR.Data.csproj
+++ b/OR.Data/OR.Data.csproj
@@ -16,5 +16,6 @@
   <ItemGroup>
     <Folder Include="Entities\" />
     <Folder Include="Interfaces\" />
+    <Folder Include="ViewModels\" />
   </ItemGroup>
 </Project>
