--- a/OR.Web/appsettings.json
+++ b/OR.Web/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Initial Catalog=onlinerequest_app7;Persist Security Info=False;User ID=sa;Password=Welkom01;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=true;Connection Timeout=30;"
+    "DefaultConnection": "Server=142.93.210.79;Initial Catalog=onlinerequest;Persist Security Info=False;User ID=sa;Password=Welkom01;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=true;Connection Timeout=30;"
   },
   "Logging": {
     "LogLevel": {
@@ -8,6 +8,10 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "JwtIssuerOptions": {
+    "Issuer": "webApi",
+    "Audience": "http://localhost:56623/"
   },
   "AllowedHosts": "*",
   "BlobStorage": {
