Add twilio vefification

--- a/OR.Web/appsettings.json
+++ b/OR.Web/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Initial Catalog=onlinerequest_app7;Persist Security Info=False;User ID=sa;Password=Welkom01;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=true;Connection Timeout=30;"
+    "DefaultConnection": "Server=142.93.210.79;Initial Catalog=onlinerequest;Persist Security Info=False;User ID=sa;Password=Welkom01;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=true;Connection Timeout=30;"
   },
   "Logging": {
     "LogLevel": {
@@ -15,6 +15,6 @@
     "RootDocuments": "documents"
   },
   "JwtIssuerOptions": {
-    "Audience": "http://localhost:5900/"
+    "Audience": "http://or-api-test.cidlicensor.com"
   }
 }
