--- a/OR.Web/OR.Web.csproj
+++ b/OR.Web/OR.Web.csproj
@@ -16,6 +16,7 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.5.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.6" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.1.8" />
+    <PackageReference Include="Twilio" Version="5.38.0" />
   </ItemGroup>
 
   <ItemGroup>
@@ -23,6 +24,7 @@
     <Folder Include="Apis\" />
     <Folder Include="Migrations\" />
     <Folder Include="Mailing\" />
+    <Folder Include="Twilio\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\OR.Data\OR.Data.csproj">
