--- a/OR.Data/OR.Data.csproj
+++ b/OR.Data/OR.Data.csproj
@@ -13,6 +13,7 @@
     </PackageReference>
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.6" />
     <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.2.2" />
+    <PackageReference Include="AutoMapper" Version="10.0.0" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Entities\" />
