--- a/OR.Web/OR.Web.csproj
+++ b/OR.Web/OR.Web.csproj
@@ -18,6 +18,8 @@
     <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.1.8" />
     <PackageReference Include="Twilio" Version="5.38.0" />
     <PackageReference Include="AutoMapper" Version="10.0.0" />
+    <PackageReference Include="RestClient" Version="3.0.0.21" />
+    <PackageReference Include="RestSharp" Version="106.11.5" />
   </ItemGroup>
 
   <ItemGroup>
